--- a/src/app/components/buscador/buscador.component.html
+++ b/src/app/components/buscador/buscador.component.html
@@ -1,11 +1,17 @@
 <h1>Buscador
-  <small>{{ termino }}</small>
+  <small>{{termino}}</small>
 </h1>
 <hr>
+<div *ngIf="heroes.length == 0" class="row animated fadeIn fast">
+  <div class="col-md-12">
+    <div class="alert alert-info" role="alert">
+      No existen resultado con el término: {{termino}}
+    </div>
+  </div>
+</div>
 
-<div class="card-columns">
-
-  <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
+<div *ngIf="heroes.length != 0" class="card-columns">
+  <div  class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
     <img class="card-img-top" [src]="heroe.img" [alt]="heroe.nombre">
     <div class="card-body">
       <h4 class="card-title">{{ heroe.nombre }}</h4>
